--- a/angular-4/src/app/common/navigation/navigation.component.html
+++ b/angular-4/src/app/common/navigation/navigation.component.html
@@ -6,8 +6,11 @@
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavId">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/car">Car</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
